--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -28,7 +28,7 @@ button:hover {
     height: 100%;
     display: inline-block;
     width: 25%;
-    padding: 0 30px 0 30px;    
+    padding: 0 30px 0 30px;   
 
     
 }
@@ -39,11 +39,13 @@ border-width: 0 0 0 1px;
 
 }
 
-h3 {
+.locations h3, .amenities h3 {
     font-weight: 600;
+    margin: 15px 30px 0 0; 
     
 }
-h4{
+.locations h4, .amenities h4{
     font-size: 14px;
     font-weight: 400;
+    margin: 0px 30px 0 0; 
 }
