--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -4,6 +4,7 @@
     width: 100%;
     display: inline-table;
     border-style: solid;
+    position: relative;
     border-width: 1px;
     border-radius: 4px;
     border-color: #DDDDDD;
@@ -27,8 +28,10 @@ button:hover {
 .locations, .amenities {
     height: 100%;
     display: inline-block;
+    /* float: left; */
     width: 25%;
     padding: 0 30px 0 30px;   
+    
 
     
 }
@@ -51,15 +54,28 @@ border-width: 0 0 0 1px;
 }
 
 .popover {
-    /* display: none; */
+    display: none;
     position: absolute;
     background-color: #FAFAFA;
-    width: inherit;
     border-style: solid;
     border-width: 1px;
     border-radius: 4px;
+    list-style-type: none;
+    border-color: #DDDDDD ;
+    margin-left: -31px;
+    margin-top: 18px;
+    width: inherit;
+    padding: 30px;  
 
 }
+.locations:hover .popover, .amenities:hover .popover{
+    display: block;
+}
+li {
+    list-style-type: none;
+
+}
+
 li h2 {
     font-size: 16px;
 }
