--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,6 +1,7 @@
 footer {
     position: absolute;
-    bottom: 0;
+    /* bottom: 0; */
+    margin-top: 100vh;
     background-color: white;
     height: 60px;
     width: 100%;
